--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -122,11 +122,11 @@
         app:layout_constraintStart_toStartOf="@+id/description" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/shareCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
-        android:text="1255"
+        android:text="0"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -134,20 +134,20 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/commentCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="120"
+        android:text="0"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/likeCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="410"
+        android:text="0"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintStart_toStartOf="@+id/imageView4"
