--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_tiktok">#FE2C55</color>
+    <color name="blue_pastel_tiktok">#C0DEFF</color>
+    <color name="grey_pastel_tiktok">#EEEEEE</color>
 </resources>
