--- a/app/src/main/res/layout/fragment_mail_box.xml
+++ b/app/src/main/res/layout/fragment_mail_box.xml
@@ -7,6 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/token"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="mailbox_fragment" />
