--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <include layout="@layout/custom_actionbar" />
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/custom_actionbar" />
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Log In"
+    android:text="Đăng nhập"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginTop="170dp"
     android:textSize="25dp"
@@ -18,7 +22,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email or Username"
+        android:text=""
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@id/login"
         android:layout_marginTop="20dp"
@@ -28,33 +32,36 @@
         android:id="@+id/emailorusername"
         />
     <EditText
+        android:hint="Số điện thoại"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/login_email"
         app:layout_constraintTop_toBottomOf="@+id/emailorusername"
         android:layout_marginTop="10dp"
-        android:background="@color/blue_pastel_tiktok"
+        android:background="@drawable/bg_edittext"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         />
     <EditText
+        android:hint="Mật khẩu"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/login_password"
         app:layout_constraintTop_toBottomOf="@+id/login_email"
         android:layout_marginTop="10dp"
-        android:background="@color/grey_pastel_tiktok"
+        android:background="@drawable/bg_edittext"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Forgot password ?"
+        android:text="Quên mật khẩu ?"
         android:textSize="15dp"
         app:layout_constraintTop_toBottomOf="@id/login_password"
         android:layout_marginTop="20dp"
@@ -72,13 +79,13 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:text="Log in"
+        android:text="Đăng nhập"
         android:backgroundTint="@color/red_tiktok"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Don't have an account ?"
+        android:text="Bạn chưa có tài khoản ?"
         android:textSize="15dp"
         app:layout_constraintTop_toBottomOf="@id/btn_login"
         android:layout_marginTop="50dp"
@@ -89,7 +96,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign up"
+        android:text="Đăng ký"
         android:textSize="15dp"
         app:layout_constraintTop_toBottomOf="@id/btn_login"
         android:layout_marginTop="50dp"
