--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -35,6 +36,11 @@
             android:text="\@username"
             android:textStyle="bold"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +51,6 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="210dp"
             android:layout_marginLeft="70dp"
             android:gravity="center"
             android:text="0"
@@ -56,7 +61,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/profile_dangollow"
-            android:layout_marginTop="210dp"
+
             android:layout_marginLeft="30dp"
             android:gravity="center"
             android:text="0"
@@ -67,7 +72,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/profile_follower"
-            android:layout_marginTop="210dp"
+
             android:layout_marginLeft="30dp"
             android:gravity="center"
             android:text="0"
@@ -139,14 +144,16 @@
                 android:background="@color/grey_pastel_tiktok"
                 android:src="@drawable/icon_more"/>
         </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            >
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/custom_refresh_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
             <include layout="@layout/profile_user_sample" />
             <ProgressBar
@@ -158,6 +165,6 @@
                 android:visibility="gone" />
 
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
