--- a/app/src/main/res/layout/profile_user_sample.xml
+++ b/app/src/main/res/layout/profile_user_sample.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="10dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="10dp"
@@ -31,35 +31,34 @@
         android:gravity="center"
         android:textStyle="bold"
         />
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="180dp"
             android:text="0"
             android:id="@+id/user_count_follower"
             android:layout_marginRight="5dp"
-            app:layout_constraintRight_toLeftOf="@id/user_follower"
             android:layout_marginLeft="45dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             />
         <TextView
+            android:layout_marginRight="46dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="follower"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="180dp"
             android:id="@+id/user_follower"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintLeft_toRightOf="@id/user_count_follower"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginLeft="5dp"/>
+    </LinearLayout>
 
     <Button
+        android:layout_marginHorizontal="16dp"
         android:id="@+id/user_btn_follow"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:backgroundTint="@color/red_tiktok"
         style="@style/Base.CardView"
