--- a/app/src/main/res/layout-v28/activity_update_profile_main.xml
+++ b/app/src/main/res/layout-v28/activity_update_profile_main.xml
@@ -193,20 +193,22 @@
             android:textSize="16sp"
             android:textColor="#000000"
             android:textFontWeight="700"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/insUrl"
             android:text="Thêm Instagram"
-            android:layout_gravity="center"
+            android:layout_gravity="end"
             android:textSize="16sp"
+            android:layout_weight="1"
             android:textColor="#808080"
             android:layout_width="wrap_content"
+            android:singleLine="true"
             android:layout_height="wrap_content"/>
         <ImageView
             android:src="@drawable/arrow_right_icon"
             android:layout_marginLeft="8dp"
+            android:singleLine="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -222,13 +224,13 @@
             android:textSize="16sp"
             android:textColor="#000000"
             android:textFontWeight="700"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/ytUrl"
             android:text="Thêm YouTube"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:textSize="16sp"
             android:textColor="#808080"
             android:layout_width="wrap_content"
@@ -251,14 +253,14 @@
             android:textSize="16sp"
             android:textColor="#000000"
             android:textFontWeight="700"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/twitterUrl"
             android:text="Thêm Twitter"
             android:layout_gravity="center"
             android:textSize="16sp"
+            android:layout_weight="1"
             android:textColor="#808080"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
