--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -7,16 +7,17 @@
     android:background="@color/black">
 
     <VideoView
-
         android:id="@+id/videoId"
+        android:translationZ="1dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <ImageView
         android:id="@+id/imageView"
+        android:translationZ="2dp"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:elevation="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,6 +26,7 @@
 
     <ImageView
         android:id="@+id/imageView4"
+        android:translationZ="2dp"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="24dp"
@@ -36,6 +38,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circleImageView"
+        android:translationZ="2dp"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="24dp"
@@ -48,6 +51,7 @@
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="32dp"
+        android:translationZ="3dp"
         android:layout_height="32dp"
         android:src="@drawable/icon_add"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
@@ -58,6 +62,7 @@
 
     <ImageView
         android:id="@+id/imageView3"
+        android:translationZ="2dp"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="24dp"
@@ -69,6 +74,7 @@
 
     <ImageView
         android:id="@+id/imageView2"
+        android:translationZ="2dp"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="68dp"
@@ -80,6 +86,7 @@
 
     <ImageView
         android:id="@+id/imageView8"
+        android:translationZ="2dp"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
@@ -91,6 +98,7 @@
 
     <TextView
         android:id="@+id/music"
+        android:translationZ="2dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -105,6 +113,7 @@
 
     <TextView
         android:id="@+id/description"
+        android:translationZ="2dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -117,6 +126,7 @@
 
     <TextView
         android:id="@+id/userName"
+        android:translationZ="2dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -129,6 +139,7 @@
 
     <TextView
         android:id="@+id/shareCount"
+        android:translationZ="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
@@ -141,6 +152,7 @@
 
     <TextView
         android:id="@+id/commentCount"
+        android:translationZ="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
@@ -151,6 +163,7 @@
 
     <TextView
         android:id="@+id/likeCount"
+        android:translationZ="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
