--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -67,6 +67,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:textColor="#ffffff"
         android:text="Đăng ký"
         android:backgroundTint="@color/red_tiktok"
         />
