--- a/app/src/main/res/layout/profile_user_sample.xml
+++ b/app/src/main/res/layout/profile_user_sample.xml
@@ -67,6 +67,7 @@
         android:gravity="center"
         android:layout_gravity="bottom"
         android:layout_marginTop="220dp"
+        android:textSize="16sp"
         android:layout_marginBottom="10dp"/>
 
 </androidx.cardview.widget.CardView>
